WS_INTEGRATION/DX Sandbox/src/objects/Invention__c.object
<CustomObject>
    <description>Publicly disclosed inventions from KU</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventions (Account)</relationshipLabel>
        <relationshipName>Inventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Invention__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark the invention as closed and start closeout steps.</inlineHelpText>
        <label>Close Invention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closeout_Comments__c</fullName>
        <inlineHelpText>What are the reasons this invention is being closed out?</inlineHelpText>
        <label>Closeout Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidential_Summary__c</fullName>
        <label>Confidential Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_Since_Disclosure__c</fullName>
        <description>Total number of days since receipt of disclosure.</description>
        <formula>TODAY() -   Disclosure_Execution_Date__c</formula>
        <inlineHelpText>Auto-updated field</inlineHelpText>
        <label>Days Since Disclosure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disclosure_Execution_Date__c</fullName>
        <label>Disclosure Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>Closeout results</description>
        <globalPicklist>Disposition</globalPicklist>
        <inlineHelpText>Closeout results</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Inventions</relationshipLabel>
        <relationshipName>Inventions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EIR_Number__c</fullName>
        <label>EIR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Assessment_Comments__c</fullName>
        <label>External Assessment Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Assessment_Required__c</fullName>
        <inlineHelpText>Please designate if this invention will need to be assessed by an external party.</inlineHelpText>
        <label>External Assessment Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Assessment_Score__c</fullName>
        <label>External Assessment Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Lead_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Account must be linked if the Lead Institution is marked as &quot;External&quot;</description>
        <inlineHelpText>An Account must be linked if the Lead Institution is marked as &quot;External&quot;</inlineHelpText>
        <label>External Lead Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Institution Inventions</relationshipLabel>
        <relationshipName>Inventions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Non_Provisional_Patent_App_Date__c</fullName>
        <inlineHelpText>Earliest file date of all non-provisional IP related to this invention.</inlineHelpText>
        <label>First Non-Provisional Patent App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Provisional_Patent_App_File_Date__c</fullName>
        <inlineHelpText>Earliest file date of all provisional IP related to this invention.</inlineHelpText>
        <label>First Provisional Patent App File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Publication_Sale_or_Public_Use__c</fullName>
        <formula>Public_Disclosure_Date__c</formula>
        <inlineHelpText>Pulled automatically from the Public Disclosure Date.</inlineHelpText>
        <label>First Publication, Sale, or Public Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Auto generated value from Apex Invention Class</description>
        <label>Fiscal Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Grant_or_Contact_Number__c</fullName>
        <label>Funding Grant or Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Used in Anticipated Disclosures.</description>
        <inlineHelpText>First date any information was given to the Licensing Officer.</inlineHelpText>
        <label>Initial Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Assessment_Comments__c</fullName>
        <inlineHelpText>This field is rich text and may be formatted</inlineHelpText>
        <label>Internal Assessment Comments</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Assessment_Score__c</fullName>
        <label>Internal Assessment Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invention_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invention Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inventions (Invention Contact)</relationshipLabel>
        <relationshipName>Inventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invention_Report_Number_EIR__c</fullName>
        <inlineHelpText>Enter in only numbers, the dashes will be automatically added</inlineHelpText>
        <label>Invention Report Number (EIR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invention_Status_Comments__c</fullName>
        <description>Comments that help explain the status of the invention</description>
        <inlineHelpText>Comments that help explain the status of the invention</inlineHelpText>
        <label>Invention Status Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invention_Title__c</fullName>
        <description>Short description of the invention</description>
        <inlineHelpText>Short description of the invention</inlineHelpText>
        <label>Invention Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventor_Listing__c</fullName>
        <description>Listing of all inventors separated by a semicolon. Filled in automatically through code.</description>
        <label>Inventor Listing</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KU_Financial_Account__c</fullName>
        <description>External ID to Peoplesoft for accounting purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID to Peoplesoft for accounting purposes</inlineHelpText>
        <label>KU Financial Account</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Institution__c</fullName>
        <label>Lead Institution</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The University of Kansas (KU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The University of Kansas Medical Center (KU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The University of Kansas Medical Center Research Institute, Inc. (KUMCRI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Center for Technology Commercialization, Inc. (KUCTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU School of Medicine-Wichita (KUSMW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas University Endowment Association (KUEA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Center for Research, Inc. (KUCR)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Inventor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lead Inventor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Inventions</relationshipLabel>
        <relationshipName>PrimaryInventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensing_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>KUIC Licensing Associate coordinating with the inventors for this invention</description>
        <inlineHelpText>KUIC Licensing Associate coordinating with the inventors for this invention</inlineHelpText>
        <label>Licensing Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Campus responsibility of the invention</description>
        <inlineHelpText>Select the Campus with primary responsibility for this invention.</inlineHelpText>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Lawrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Center</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <label>Material Type</label>
        <picklist>
            <picklistValues>
                <fullName>Antibody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouse Model</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Third_Party_Title_Waived__c</fullName>
        <formula>IF( NOT( ISBLANK(  Waive_to_Account__c )), Waive_to_Account__c,  Waive_to_Individual__c )</formula>
        <inlineHelpText>Automatically filled by the fields &quot;Waive to Account&quot; or &quot;Waive to Individual&quot;.
Waiving to an Account takes priority over an individual.</inlineHelpText>
        <label>Name of Third Party - Title Waived</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Elect_Title_Other_Reason__c</fullName>
        <description>Dependent upon Waive Reason field</description>
        <inlineHelpText>If you would like to add more detail to the Waive Reason.</inlineHelpText>
        <label>Not Elect Title Other Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Not_Elect_Title_Reason__c</fullName>
        <inlineHelpText>Waive Reason</inlineHelpText>
        <label>Not Elect Title Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Low commercial potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-patentable (not novel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-patentable (not useful)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-patentable (obvious)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Hold_Comments__c</fullName>
        <inlineHelpText>Comments are required if an invention is on hold.</inlineHelpText>
        <label>On Hold Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark the invention as being on hold, which will change the status to &quot;Hold&quot; until this box is unchecked.</inlineHelpText>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <description>General comments regarding the invention</description>
        <inlineHelpText>General comments regarding the invention</inlineHelpText>
        <label>Other Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Invention_Report_Number__c</fullName>
        <inlineHelpText>EIR number of the parent Invention</inlineHelpText>
        <label>Parent Invention Report Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patent_Bar_Date__c</fullName>
        <description>Bar date of patentability, based upon public disclosure date</description>
        <formula>Public_Disclosure_Date__c + 366</formula>
        <inlineHelpText>Auto-updated field</inlineHelpText>
        <label>Patent Bar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Agency__c</fullName>
        <description>Text field containing the iEdison Value from the Account identified as the primary sponsor.</description>
        <label>Primary Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Filled in with code, should not be forward visible</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inventions (Primary Contact)</relationshipLabel>
        <relationshipName>PrimaryInvention</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Technology_Class__c</fullName>
        <globalPicklist>Technology_Class</globalPicklist>
        <label>Primary Technology Class</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Art_Search_Comments__c</fullName>
        <inlineHelpText>Some comment is required.</inlineHelpText>
        <label>Prior Art Search Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Art_Search_Completed_Date__c</fullName>
        <label>Prior Art Search Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Private_Abstract__c</fullName>
        <description>This is internal to KU only!</description>
        <inlineHelpText>This is internal to KU only! This text box is rich text and therefore may be formatted.</inlineHelpText>
        <label>Private Abstract</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Public_Abstract__c</fullName>
        <inlineHelpText>This field is rich text, so you may format the text inside.</inlineHelpText>
        <label>Public Abstract</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Public_Disclosure_Comments__c</fullName>
        <label>Public Disclosure Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Disclosure_Date__c</fullName>
        <label>Public Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_for_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks the invention status as Marketing.</inlineHelpText>
        <label>Ready for Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Agreement_Type__c</fullName>
        <description>Filled in by APEX when an Agreement is associated. Used to update the Status field. Not on page layout.</description>
        <label>Related Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Title_Extension_Years__c</fullName>
        <inlineHelpText>iEdison title extension request in years</inlineHelpText>
        <label>Request Title Extension Years</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBIR_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Small Business Innovation Research</inlineHelpText>
        <label>SBIR Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Technology_Class__c</fullName>
        <globalPicklist>Technology_Class</globalPicklist>
        <label>Secondary Technology Class</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Formula text field.</description>
        <formula>IF( Close_Invention__c = TRUE, &quot;Inactive&quot;,
IF( Related_Agreement_Type__c = &quot;License&quot;, &quot;Licensed&quot;,
IF( Ready_for_Market__c = TRUE, &quot;Marketing&quot;,
IF( NOT(ISBLANK(Disclosure_Execution_Date__c )), &quot;Evaluation&quot;,
&quot;Anticipated&quot;))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_Export_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will limit visibility of this invention to others.</inlineHelpText>
        <label>Subject to Export Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Elected__c</fullName>
        <description>Indicates what title has been elected for Invention through iEdison</description>
        <inlineHelpText>Indicate what title has been elected for Invention through iEdison</inlineHelpText>
        <label>Title Elected</label>
        <picklist>
            <picklistValues>
                <fullName>Under Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elect Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed as an Unpatented Biological Material or Research Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Elect Title - Waive to Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Elect Title - Waiver to Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Elect Title - Waive to Inventor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Election_Date__c</fullName>
        <description>If date entered, will update EIR status</description>
        <label>Title Election Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Track_Code_Counter__c</fullName>
        <description>Used to calculate the next counter number for the track code</description>
        <label>Track Code Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waive_to_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Waive to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventions Waived to Account</relationshipLabel>
        <relationshipName>Waived2Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waive_to_Individual__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Waive to Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inventions Waived to Individual</relationshipLabel>
        <relationshipName>Waived2Individual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waiver_Date__c</fullName>
        <label>Waiver Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Working_Title__c</fullName>
        <inlineHelpText>Something to differentiate the different inventions in the anticipated status. This will not be the final title.</inlineHelpText>
        <label>Working Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iEdison_Account_Number__c</fullName>
        <formula>IF(ISPICKVAL(Location__c , &quot;Lawrence&quot;) , &quot;1484302&quot; ,
IF(ISPICKVAL(Location__c , &quot;Medical Center&quot;) , &quot;1484303&quot;, 
&quot;&quot;))</formula>
        <inlineHelpText>Grantee / Contractor Organization
Automatically filled in by Location.</inlineHelpText>
        <label>iEdison Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iEdison_All_IP_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If all linked IP have been submitted to iEdison, this will be checked.
If this is unchecked, then there are IP that are not updated with iEdison.</inlineHelpText>
        <label>iEdison All IP Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iEdison_Docket_Number__c</fullName>
        <externalId>true</externalId>
        <label>iEdison Docket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iEdison_Explanatory_Notes__c</fullName>
        <inlineHelpText>iEdison Reporting comment</inlineHelpText>
        <label>Explanatory Notes</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iEdison_Initial_Entry_Date__c</fullName>
        <inlineHelpText>Date KUIC submitted information to iEdison</inlineHelpText>
        <label>iEdison Initial Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iEdison_Invention_Report_Date__c</fullName>
        <formula>Disclosure_Execution_Date__c</formula>
        <inlineHelpText>Pulled automatically from the Disclosure Execution date.</inlineHelpText>
        <label>Invention Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iEdison_One_Year_Extension_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Request One Year Extension to File Initial Patent Application</inlineHelpText>
        <label>Request One Year Extension to File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iEdison_Reporting_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iEdison Reporting Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iEdison_Status__c</fullName>
        <description>Indicates what title has been elected for Invention through iEdison</description>
        <inlineHelpText>Indicate what title has been elected for Invention through iEdison</inlineHelpText>
        <label>iEdison Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elect Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed as an Unpatented Biological Material or Research Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Elect Title - Waive to Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Elect Title - Waiver to Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Elect Title - Waive to Inventor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invention</label>
    <listViews>
        <fullName>All_Inventions</fullName>
        <columns>NAME</columns>
        <columns>Invention_Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Licensing_Associate__c</columns>
        <columns>Lead_Inventor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Inventions</label>
    </listViews>
    <nameField>
        <label>Invention Track Code (Autonamed)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventions</pluralLabel>
    <recordTypes>
        <fullName>Copyright</fullName>
        <active>true</active>
        <label>Copyright</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exception</fullName>
        <active>true</active>
        <description>This record type can only be made by admins. There are not any requirements for this record type.</description>
        <label>Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invention_Federally_Funded</fullName>
        <active>true</active>
        <label>Invention - Federally Funded</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invention_Not_Federally_Funded</fullName>
        <active>true</active>
        <label>Invention - Not Federally Funded</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closeout_Comments</fullName>
        <active>true</active>
        <description>Require Closeout Comments if invention is closed</description>
        <errorConditionFormula>AND(  Close_Invention__c = TRUE ,  ISBLANK(Closeout_Comments__c) )</errorConditionFormula>
        <errorMessage>Closeout Comments are required if you mark the invention as closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closeout_Disposition</fullName>
        <active>true</active>
        <description>Require a Disposition when an invention is marked as closed</description>
        <errorConditionFormula>AND(  Close_Invention__c = TRUE ,  ISBLANK(TEXT(Disposition__c)) )</errorConditionFormula>
        <errorMessage>A disposition must be selected to close out an invention</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disclosure_before_Market_Ready</fullName>
        <active>true</active>
        <description>Require a disclosure date before invention marked as ready to market</description>
        <errorConditionFormula>AND(
ISBLANK( Disclosure_Execution_Date__c )
,
 Ready_for_Market__c = TRUE
)</errorConditionFormula>
        <errorMessage>The Disclosure Execution Date is required before the invention can be marked as Ready for Market.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIR_Format</fullName>
        <active>true</active>
        <description>Format number field to match XXXXXXX-XX-XXXX (all numbers).</description>
        <errorConditionFormula>NOT(
OR(
ISBLANK( Invention_Report_Number_EIR__c )
,
REGEX( Invention_Report_Number_EIR__c , &quot;[0-9]{7}-[0-9]{2}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
        <errorMessage>Please be sure to format the Invention Report Number (EIR) correctly. The format is XXXXXXX-XX-XXXX, all numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIR_Number</fullName>
        <active>true</active>
        <description>Require an EIR number when Initial Entry Date is populated</description>
        <errorConditionFormula>AND( 
NOT( ISBLANK(iEdison_Initial_Entry_Date__c) ) , 
ISBLANK( Invention_Report_Number_EIR__c ) 
)</errorConditionFormula>
        <errorMessage>If the invention has been submitted to iEdison, it should have an Invention Report Number (EIR).
Please enter that value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Assessment_Required</fullName>
        <active>true</active>
        <description>When the prior art search is completed, the External Assessment Required field must be filled in. they should know at this point.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Prior_Art_Search_Completed_Date__c ))
,
 ISPICKVAL( External_Assessment_Required__c , &quot;&quot;) 
)</errorConditionFormula>
        <errorMessage>Please designate whether an external assessment is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Assessment_Score</fullName>
        <active>true</active>
        <description>Require a score if marked as required before the invention can be moved to market.</description>
        <errorConditionFormula>AND(
Ready_for_Market__c =TRUE
,
 ISPICKVAL(External_Assessment_Required__c , &quot;Yes&quot;) 
,
ISNULL( External_Assessment_Score__c )
)</errorConditionFormula>
        <errorMessage>Please be sure to record the External Assessment Score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Lead_Institution_Required</fullName>
        <active>true</active>
        <description>Require a lead institution be selected when the Lead Institution field is set to External.</description>
        <errorConditionFormula>AND (
ISPICKVAL( Lead_Institution__c , &quot;External&quot;) 
,
ISBLANK(External_Lead_Institution__c)
)</errorConditionFormula>
        <errorMessage>If the Lead Institution is external, please define that institution in the External Lead Institution field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_iEdison_Entry_Rq_Disclosure_Date</fullName>
        <active>true</active>
        <description>Initial iEdison Entry requires a Disclosure Execution Date</description>
        <errorConditionFormula>AND(
ISBLANK( Disclosure_Execution_Date__c )
,
NOT(ISBLANK( iEdison_Initial_Entry_Date__c ))
)</errorConditionFormula>
        <errorMessage>An invention must first be disclosed to KU before it can be reported to iEdison.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Internal_Assessment_Score</fullName>
        <active>true</active>
        <description>Require Internal Assessment Score before Invention can be moved to market</description>
        <errorConditionFormula>AND(
ISBLANK( Internal_Assessment_Score__c )
,
 Ready_for_Market__c = TRUE
)</errorConditionFormula>
        <errorMessage>Please be sure to record the internal assessment score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Comments</fullName>
        <active>true</active>
        <description>Require &quot;On Hold Comments&quot; if &quot;On Hold&quot; is checked</description>
        <errorConditionFormula>AND( On_Hold__c ,  ISBLANK( On_Hold_Comments__c ) )</errorConditionFormula>
        <errorMessage>A comment is required in the field &quot;On Hold Comments&quot; since the invention is marked as &quot;On Hold&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Disclosure_Date</fullName>
        <active>true</active>
        <description>On Hold requires a Disclosure Date</description>
        <errorConditionFormula>AND(
 On_Hold__c = TRUE
,
 ISBLANK(Disclosure_Execution_Date__c)
)</errorConditionFormula>
        <errorMessage>Inventions cannot be placed On Hold until they have a Disclosure Execution Date. Please either uncheck On Hold or fill in the Disclosure Execution Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prior_Art_Search_Before_Market</fullName>
        <active>true</active>
        <description>Require Prior Art Search Completed Date before Ready for Market can be checked.</description>
        <errorConditionFormula>AND(
ISBLANK( Prior_Art_Search_Completed_Date__c )
,
Ready_for_Market__c =TRUE
)</errorConditionFormula>
        <errorMessage>Please be sure to complete the Prior Art Search before this invention is moved to Market Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prior_Art_Search_Comments</fullName>
        <active>true</active>
        <description>When Prior Art Search Completed Date is populated, require the accompanying comments.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Prior_Art_Search_Completed_Date__c ))
,
ISBLANK( Prior_Art_Search_Comments__c )
)</errorConditionFormula>
        <errorMessage>Please be sure to leave some comments in the Prior Art Search Comment box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Waive_Reason</fullName>
        <active>true</active>
        <description>Require Waive reason when Waiver Date populated</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Waiver_Date__c )),
ISPICKVAL(Not_Elect_Title_Reason__c , &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Please choose a waive reason.</errorMessage>
    </validationRules>
</CustomObject>